--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
-    "react": "17.0.1",
-    "react-native": "0.64.0",
+    "@react-navigation/stack": "^5.14.3",
+    "react": "16.11.0",
+    "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^2.18.1"
+    "react-native-screens": "^2.18.1",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -26,7 +30,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
