--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-webview": "^11.3.1",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
